完成调用相机功能,edit模块的view层 和presenter层更好地分工。 修改最低api版本为14

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -42,4 +42,6 @@
     <string name="help_content_version">版本:1.0</string>
     <string name="help_content_website">网站:jiakaiyang.com</string>
     <string name="call_avatar">为该号码添加一个头像</string>
+    <string name="camera">相机</string>
+    <string name="gallery">相册</string>
 </resources>
